fix: whitespaces and blank lines

--- a/frontend/src/components/DocEditor/styles/print.css
+++ b/frontend/src/components/DocEditor/styles/print.css
@@ -9,7 +9,9 @@
       content: "\00A0";
     }
   }
-
+  .ProseMirror p{
+    white-space: pre-wrap;
+  }
   .ProseMirror table {
     margin-top: 1rem;  
     table-layout: fixed;
